# backups

./: MANIFEST.in  README.md  setup.cfg
backups/celery/: app.py  celery.service  celery.service.txt  celery.timer  celery.timer.txt  celerybeat-schedule  main.py  tasks.py
backups/celery/systemd_services/: backups_beat.service  backups_celery.service
