[metadata]
name = backup_tasks
version = 0.1
author = mclds
author_email = mclds@protonmail.com
description = Celery tasks for my computer backups.
long_description = file: README.md
url = https://github.com/miccaldas/backups
classifiers =
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Celery
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
            
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
verbose = 2
install_requires=
    celery
    snoop
    isort
    loguru
show_source = True

[flake8]
extend-ignore = F401 F841 W605 E704, E722, E1, W1, E2, W2, E3, W3, E4, W4, E5, W5, E731
max-line-length = 180
verbose = 2
show-source = True
